K8s/deployment copy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: farefinder-db
  labels:
    app: farefinder-db
spec:
  selector:
    matchLabels:
      app: farefinder-db
  replicas: 1
  template:
    metadata:
      labels:
        app: farefinder-db
    spec:
      containers:
        - image: docker.io/library/mysql:8
          name: farefinder-db
          ports:
            - containerPort: 3306
          livenessProbe:
            tcpSocket:
              port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: farefinder-db
spec:
  selector:
    app: farefinder-db
  ports:
    - port: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farefinder-backend
  labels:
    app: farefinder-backend
spec:
  selector:
    matchLabels:
      app: farefinder-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: farefinder-backend
    spec:
      containers:
        - image: farefinder_backend:1.0.0
          imagePullPolicy: Never
          name: farefinder-backend
          command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: farefinder-backend
spec:
  type: LoadBalancer
  selector:
    app: farefinder-backend
  ports:
    - port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: farefinder-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: farefinder-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: farefinder-frontend
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farefinder-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: farefinder-frontend
  template:
    metadata:
      labels:
        app: farefinder-frontend
    spec:
      containers:
        - name: farefinder-frontend
          image: farefinder_frontend:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: farefinder-frontend
spec:
  selector:
    app: farefinder-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
